--- a/public/site/market.html
+++ b/public/site/market.html
@@ -51,6 +51,11 @@
     </div>
       <canvas id="animationCanvas"></canvas>
     </br>
+    <button id="displayRarity" class="rarityButton">
+      <h3>
+        Rarities
+      </h3>
+    </button>
     </br>
       <div
         class="token_box"
