almost done pixelit

--- a/public/site/market.html
+++ b/public/site/market.html
@@ -75,8 +75,9 @@
       </div>
       </br>
       </div>
-        <div class="packContainer" id="packContainer" draggable="false" 
-             style="display: flex; flex-wrap: nowrap; gap: 1.5%; justify-content: center; align-items: center;">
+    <div class="packContainer" id="packContainer" draggable="false" 
+         style="display: flex; flex-wrap: wrap; gap: 1.5%; justify-content: center; align-items: center;">
+    </div>
         <div onmouseover="this.style.transform='scale(0.95)'; this.style.transition='transform 0.3s ease';" 
              onmouseout="this.style.transform='scale(1)';">
         </div>
