--- a/public/site/chat.html
+++ b/public/site/chat.html
@@ -66,7 +66,7 @@
           </div>
           <div class="messageContainer">
             <div class="usernameAndBadges">
-                <div class="username">Pixelit</div>
+                <div class="username">Loading...</div>
             </div>
             <div class="messageText">Loading...</div>
           </div>
