--- a/public/site/index.html
+++ b/public/site/index.html
@@ -32,16 +32,13 @@
     </div>
     <center>
       <h2 class="title-text title-text-1">
-        The very first Blooket private server with pixel art blooks and badges!
+        The very first Blooket private server with pixes!
       </h2>
-      <br />
-      <br />
       <h2 class="title-text title-text-2">
         Programmed primarily in JavaScript! 
       </h2>
-      <br />
       <h2 class="title-text title-text-3">
-        Created by IzumiiHD!
+        Created by IzumiiHD and Iamgamedude!
       </h2>
       <br />
       <img src="https://izumiihd.github.io/pixelitcdn/assets/img/home/homeBlooks.png" alt="Home Blooks" draggable="false" class="float-img" onclick="window.location.href='/register.html';"/>
