--- a/public/site/pixels.html
+++ b/public/site/pixels.html
@@ -82,7 +82,7 @@
         </button>
           </div>
         <button id="set-pfp" class="button-style smooth-hover" >
-          Set Profile Picture
+          Change Profile Picture
         </button>
         <div>
         </div>
