--- a/public/site/register.html
+++ b/public/site/register.html
@@ -47,7 +47,7 @@
       </div>
       <div class="form-group">
         <label for="dsc"></label>
-        <input type="discord" placeholder="Enter Discrod" name="dsc" id="dsc" required>
+        <input type="discord" placeholder="Enter Discord" name="dsc" id="dsc" required>
       </div>
       <div class="form-group">
         <label for="rea"></label>
