--- a/public/site/chat.html
+++ b/public/site/chat.html
@@ -71,6 +71,10 @@
           </div>
         </div>
       </div>
+      <div id="imageModal" class="modal" style="display: none;">
+          <span class="close" onclick="closeModal()" style="cursor: pointer;">&times;</span>
+          <img class="modal-content" id="modalImage" style="max-width: 90%; max-height: 90%; margin: auto;">
+      </div>
       <div class="inputContainer">
         <input
           type="text"
