--- a/public/site/dashboard.html
+++ b/public/site/dashboard.html
@@ -67,6 +67,9 @@
             <div id="username">loading...</div>
             <div id="role">loading...</div>
           </div>
+          <div id="badges-container">
+            <div id="badges" style="margin-top: 10px"></div>
+          </div>
         </div>
         <div class="button_container" style="margin-left: 0px; margin-top: 60px">
         <button
