--- a/public/site/index.html
+++ b/public/site/index.html
@@ -32,7 +32,7 @@
     </div>
     <center>
       <h2 class="title-text title-text-1">
-        The very first Blooket private server with pixes!
+        The very first Blooket private server with pixels!
       </h2>
       <h2 class="title-text title-text-2">
         Programmed primarily in JavaScript! 
