finisehd alot of things

--- a/public/site/credits.html
+++ b/public/site/credits.html
@@ -25,6 +25,7 @@
         <a href="/register.html"><i class="fa-solid fa-user-plus"></i> Register </a>
         <a href="/news.html"><i class="fa-solid fa-newspaper"></i> News </a>
         <a href="/credits.html"><i class="fa-solid fa-users"></i> Credits </a>
+        <a href="/changelogs.html"><i class="fa-solid fa-scroll"></i> Changelogs </a>
       </div>
     </div> 
   </div>
