--- a/public/site/dashboard.html
+++ b/public/site/dashboard.html
@@ -73,6 +73,16 @@
         </div>
         <div class="button_container" style="margin-left: 0px; margin-top: 60px">
         <button
+          class="button searchUser"
+          id="searchUser"
+          >
+          <i
+            class="fa-solid fa-magnifying-glass"
+            style="margin-right: 10px; font-size: 16px"
+          ></i
+          >Search User
+        </button>
+        <button
           class="button unlockBlooks"
           onclick="location.href='/market.html'"
           >
