added a ban checker script

--- a/public/site/market.html
+++ b/public/site/market.html
@@ -82,5 +82,6 @@
         </div>
       </div>
       <script src="/javascript/market.js"></script>
+      <script src="/api/banned.js"></script>
     </body>
 </html>
