--- a/public/site/pixels.html
+++ b/public/site/pixels.html
@@ -90,5 +90,6 @@
     </div>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="/javascript/pixels.js"></script>
+    <script src="/api/banned.js"></script>
   </body>
 </html>
