--- a/public/site/settings.html
+++ b/public/site/settings.html
@@ -77,5 +77,6 @@
       </div>
     </div>
     <script src="/javascript/settings.js"></script>
+    <script src="/api/banned.js"></script>
   </body>
 </html>
