--- a/public/panel/addbadge/badgeadder.html
+++ b/public/panel/addbadge/badgeadder.html
@@ -60,5 +60,6 @@
     <script src="../../api/verifyenc.js"></script>
     <script src="./badgeadd.js"></script>
     <script src="/api/verifyOwner.js"></script>
+    <script src="/api/banned.js"></script>
   </body>
 </html>
