--- a/public/panel/badge/badgeeditor.html
+++ b/public/panel/badge/badgeeditor.html
@@ -52,5 +52,6 @@
     <script src="../../api/verifyenc.js"></script>
     <script src="./badgeeditor.js"></script>
     <script src="/api/verifyOwner.js"></script>
+    <script src="/api/banned.js"></script>
   </body>
 </html>
