--- a/public/panel/formsManager/forms.html
+++ b/public/panel/formsManager/forms.html
@@ -50,5 +50,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <script src="./enc.js"></script>
     <script src="/api/verifyenc.js"></script>
+    <script src="/api/banned.js"></script>
   </body>
 </html>
