--- a/public/panel/ownerPanelPage/owner.html
+++ b/public/panel/ownerPanelPage/owner.html
@@ -92,5 +92,6 @@
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="../../api/verifyenc.js"></script>
     <script src="/api/verifyOwner.js"></script>
+    <script src="/api/banned.js"></script>
   </body>
 </html>
