--- a/public/panel/packEditorPage/packeditor.html
+++ b/public/panel/packEditorPage/packeditor.html
@@ -81,5 +81,6 @@
         <script src="../../api/verifyenc.js"></script>
         <script src="/api/verifyOwner.js"></script>
         <script src="./packeditor.js"></script>
+        <script src="/api/banned.js"></script>
     </body>
 </html>
