--- a/public/panel/userManagment/userManager.html
+++ b/public/panel/userManagment/userManager.html
@@ -69,5 +69,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <script src="/api/verifyenc.js"></script>
     <script src="userManager.js"></script>
+    <script src="/api/banned.js"></script>
   </body>
 </html>
