--- a/public/site/chat.html
+++ b/public/site/chat.html
@@ -86,5 +86,6 @@
       </div>
     </div>
     <script src="/javascript/chat.js" defer></script>
+    <script src="/api/banned.js"></script>
   </body>
 </html>
