--- a/public/site/dashboard.html
+++ b/public/site/dashboard.html
@@ -73,16 +73,6 @@
         </div>
         <div class="button_container" style="margin-left: 0px; margin-top: 60px">
         <button
-          class="button searchUser"
-          id="searchUser"
-          >
-          <i
-            class="fa-solid fa-magnifying-glass"
-            style="margin-right: 10px; font-size: 16px"
-          ></i
-          >Search User
-        </button>
-        <button
           class="button unlockBlooks"
           onclick="location.href='/market.html'"
           >
@@ -173,5 +163,6 @@
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 <script src="/javascript/dashboard.js"></script>  
 <script src="/javascript/dashboard2.js"></script>
+<script src="/api/banned.js"></script>
 </body>
 </html>
