--- a/public/panel/packEditorPage/packeditor.html
+++ b/public/panel/packEditorPage/packeditor.html
@@ -82,5 +82,6 @@
         <script src="/api/verifyOwner.js"></script>
         <script src="./packeditor.js"></script>
         <script src="/api/banned.js"></script>
+        <script src="/api/auth.js"></script>
     </body>
 </html>
