--- a/public/site/chat.html
+++ b/public/site/chat.html
@@ -87,5 +87,6 @@
     </div>
     <script src="/javascript/chat.js" defer></script>
     <script src="/api/banned.js"></script>
+    <script src="/api/auth.js"></script>
   </body>
 </html>
