--- a/public/site/leaderboard.html
+++ b/public/site/leaderboard.html
@@ -63,4 +63,5 @@
   </body>
   <script src="/javascript/leaderboard.js"></script>
   <script src="/api/banned.js"></script>
+  <script src="/api/auth.js"></script>
 </html>
