--- a/public/panel/addbadge/badgeadder.html
+++ b/public/panel/addbadge/badgeadder.html
@@ -61,5 +61,6 @@
     <script src="./badgeadd.js"></script>
     <script src="/api/verifyOwner.js"></script>
     <script src="/api/banned.js"></script>
+    <script src="/api/auth.js"></script>
   </body>
 </html>
