--- a/public/panel/badge/badgeeditor.html
+++ b/public/panel/badge/badgeeditor.html
@@ -53,5 +53,6 @@
     <script src="./badgeeditor.js"></script>
     <script src="/api/verifyOwner.js"></script>
     <script src="/api/banned.js"></script>
+    <script src="/api/auth.js"></script>
   </body>
 </html>
