--- a/public/panel/enc/enc.html
+++ b/public/panel/enc/enc.html
@@ -53,5 +53,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <script src="/api/verifyenc.js"></script>
     <script src="/api/banned.js"></script>
+    <script src="/api/auth.js"></script>
   </body>
 </html>
