--- a/public/panel/formsManager/forms.html
+++ b/public/panel/formsManager/forms.html
@@ -51,5 +51,6 @@
     <script src="./enc.js"></script>
     <script src="/api/verifyenc.js"></script>
     <script src="/api/banned.js"></script>
+    <script src="/api/auth.js"></script>
   </body>
 </html>
