--- a/public/panel/getHelp/getHelp.html
+++ b/public/panel/getHelp/getHelp.html
@@ -53,5 +53,6 @@
     <script src="../../api/verifyenc.js"></script>
     <script src="/api/verifyOwner.js"></script>
     <script src="/api/banned.js"></script>
+    <script src="/api/auth.js"></script>
   </body>
 </html>
