--- a/public/panel/userManagment/userManager.html
+++ b/public/panel/userManagment/userManager.html
@@ -70,5 +70,6 @@
     <script src="/api/verifyenc.js"></script>
     <script src="userManager.js"></script>
     <script src="/api/banned.js"></script>
+    <script src="/api/auth.js"></script>
   </body>
 </html>
