--- a/public/site/dashboard.html
+++ b/public/site/dashboard.html
@@ -164,5 +164,6 @@
 <script src="/javascript/dashboard.js"></script>  
 <script src="/javascript/dashboard2.js"></script>
 <script src="/api/banned.js"></script>
+<script src="/api/auth.js"></script>
 </body>
 </html>
