--- a/public/site/market.html
+++ b/public/site/market.html
@@ -83,5 +83,6 @@
       </div>
       <script src="/javascript/market.js"></script>
       <script src="/api/banned.js"></script>
+      <script src="/api/auth.js"></script>
     </body>
 </html>
