--- a/public/site/settings.html
+++ b/public/site/settings.html
@@ -78,5 +78,6 @@
     </div>
     <script src="/javascript/settings.js"></script>
     <script src="/api/banned.js"></script>
+    <script src="/api/auth.js"></script>
   </body>
 </html>
