--- a/public/site/changelogs.html
+++ b/public/site/changelogs.html
@@ -62,13 +62,13 @@
         <h2 class="changelog-version">Version 2.2.0 - New Update and Improvements</h2>
         <p class="changelog-description">This update includes the following changes:</p>
 
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Created a more proper and stable chat Added images to chat.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Created a more proper and stable chat.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Created this very same changelog your viewing right now.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Created mute and ban durations.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added images to chat.</h3>
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped the dashboard.</h3>
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added changing passwords.</h3>
-
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added timestamps to chat.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added ban verification</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added login verification</h3>
       </div>
     </div>
   </div>
