finished pixels page, moving onto badges

--- a/public/panel/ownerPanelPage/owner.html
+++ b/public/panel/ownerPanelPage/owner.html
@@ -54,21 +54,21 @@
       </button>
 
       <br>
+
+      <button
+        class="button"
+        onclick="window.location.href='../badge/badgeeditor.html'"
+      >
+        <i class="fa-solid fa-medal"></i> Badge Editor
+      </button>
+      
+      <br>
       
       <button
         class="button"
         onclick="window.location.href='../addbadge/badgeadder.html'"
       >
         <i class="fa-solid fa-screwdriver-wrench"></i> Badge Manager
-      </button>
-
-      <br>
-
-      <button
-        class="button"
-        onclick="window.location.href='../badge/badgeeditor.html'"
-      >
-        <i class="fa-solid fa-screwdriver-wrench"></i> Badge Editor
       </button>
 
       <br>
