--- a/public/site/changelogs.html
+++ b/public/site/changelogs.html
@@ -39,13 +39,13 @@
         <h2 class="changelog-version">Version 2.0.0 - Initial Release</h2>
         <p class="changelog-description">Welcome to the first release of Pixelit V2! This version includes:</p>
         
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Dashboard page</h3>
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Selling pixels</h3>
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped settings page</h3>
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Username changing</h3>
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped and functioning Market</h3>
-        <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped the user panel for staff members</h3>
-        <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped leaderboards page and made it display tokens and messages</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Dashboard page.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Selling pixels.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped settings page.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Username changing.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped and functioning Market.</h3>
+        <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped the user panel for staff members.</h3>
+        <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped leaderboards page and made it display tokens and messages.</h3>
       </div>
 
       <div class="changelog-entry changelog-v210">
@@ -67,8 +67,10 @@
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Created mute and ban durations.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added images to chat.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added timestamps to chat.</h3>
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added ban verification</h3>
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added login verification</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added ban verification.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added login verification.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped pixels page.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Minor market edits.</h3>
       </div>
     </div>
   </div>
