--- a/public/site/dashboard.html
+++ b/public/site/dashboard.html
@@ -57,8 +57,17 @@
             id="pfp"
             src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/logo.png"
             alt="pfp"
+            style="transition: transform 0.2s ease-in-out;"
+            onmouseover="this.style.transform = 'scale(0.9)';"
+            onmouseout="this.style.transform = 'scale(1)';"
+            onmousedown="this.style.transform = 'scale(0.8)';"
+            onmouseup="this.style.transform = 'scale(1)';"
           />
-          <div class="banner-container">
+          <div class="banner-container" style="transition: transform 0.2s ease-in-out;"
+            onmouseover="this.style.transform = 'scale(0.9)';"
+            onmouseout="this.style.transform = 'scale(1)';"
+            onmousedown="this.style.transform = 'scale(0.8)';"
+            onmouseup="this.style.transform = 'scale(1)';"
             <img
               src="https://izumiihd.github.io/pixelitcdn/assets/img/banner/pixelitBanner.png"
               alt="Pixelit Banner"
