--- a/public/site/changelogs.html
+++ b/public/site/changelogs.html
@@ -65,6 +65,7 @@
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Created a more proper and stable chat.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Created this very same changelog your viewing right now.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Created mute and ban durations.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added badges.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added images to chat.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added timestamps to chat.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added ban verification.</h3>
