--- a/public/site/leaderboard.html
+++ b/public/site/leaderboard.html
@@ -51,7 +51,7 @@
     <br/>
     <div style="display: flex; justify-content: space-between; width: 100%">
       <div class="leaderboard_Container" id="leaderboardContainer">
-        <p style="text-align: center;" id="loader">Loading...</p>
+        <p style="text-align: center;" style="color: #gold;" id="loader">Loading...</p>
       </div>
       <div class="leaderboard_title">
         Leaderboards
