working on 2.3.0 now

--- a/public/panel/enc/enc.html
+++ b/public/panel/enc/enc.html
@@ -41,12 +41,21 @@
       </div>
         <h1 class="welcome-title">Staff Panel</h1>
         <center>
+          <p>
+            Welcome to the staff panel, here you can manage forms, users, and audit logs.
+            <br />
+            The Staff panel will be rewritten sometime around update 2.3.0 - 2.5.0.
+          </p>
           <button class="button" onclick="window.location.href='../formsManager/forms.html'">
             <i class='fa-solid fa-file'></i> Forms Manager
           </button>
           <br>
           <button class="button" onclick="window.location.href='../userManagment/userManager.html'">
-            <i class="fa-solid fa-screwdriver-wrench"></i> User Manager
+            <i class="fa-solid fa-users"></i> User Manager
+          </button>
+          <br>
+          <button class="button" onclick="window.location.href=''">
+            <i class="fa-solid fa-list"></i> Audit Logs (coming soon)
           </button>
       </center>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
