--- a/public/site/market.html
+++ b/public/site/market.html
@@ -56,22 +56,24 @@
       </h3>
     </button>
     </br>
-      <div
-        class="token_box"
-      >
-        Tokens: <span id="tokens" style="margin-left: 10px">loading...</span>
-        <img
-          src="https://izumiihd.github.io/pixelitcdn/assets/img/dashboard/token.png"
-          alt="token"
-          style="
-            display: inline-block;
-            width: 36px;
-            height: 36px;
-            margin-left: 10px;
-            transform: rotate(20deg);
-          "
-        />
+    <div class="token_box">
+      <div style="text-align: center;">
+        <span style="font-size: 16px;">Tokens</span>
+        <br />
+        <span id="tokens" style="margin-left: 10px;  font-weight: bold; font-size: 24px;">loading...    </span>
       </div>
+      <img
+        src="https://izumiihd.github.io/pixelitcdn/assets/img/dashboard/token.png"
+        alt="token"
+        style="
+          display: inline-block;
+          width: fit-content;
+          height: 42px;
+          margin-left: 10px;
+          transform: rotate(20deg);
+        "
+      />
+    </div>
       </br>
       </div>
     <div class="packContainer" id="packContainer" draggable="false" 
