--- a/public/site/credits.html
+++ b/public/site/credits.html
@@ -40,34 +40,34 @@
       <h4>The creator and developer of Pixelit.</h4>
     </div>
     <div class="credits-container">
+      <h3>Iamgamedude</h3>
+      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/Iamgamedude.png" alt="Iamgamedude" draggable="false">
+      <h4>Long time contributer to Pixelit's development, an amazing developer and an owner of Pixelit.</h4>
+    </div>
+    <div class="credits-container">
+      <h3>SOUNDGOD</h3>
+      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/SOUNDGOD.png" alt="SOUNDGOD" draggable="false">
+      <h4>An amazing developer, helped us patch multiple bugs and a tester of Pixelit.</h4>
+    </div>
+    <div class="credits-container">
+      <h3>Packman28</h3>
+      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/Packman28.png" alt="Packman28" draggable="false">
+      <h4>Helps with the backend development of Pixelit and a tester of Pixelit.</h4>
+    </div>
+    <div class="credits-container">
       <h3>Lemon</h3>
       <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/logo.png" alt="Lemon" draggable="false">
       <h4>Owner of the Pixelit domain and hosts the website for us and has helped alot with development.</h4>
     </div>
     <div class="credits-container">
-      <h3>SOUNDGOD</h3>
-      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/SOUNDGOD.png" alt="SOUNDGOD" draggable="false">
-      <h4>An amazing developer, helped us patch multiple bugs and a developer of Pixelit.</h4>
-    </div>
-    <div class="credits-container">
       <h3>FrostyIce109</h3>
       <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/FrostyIce109.png" alt="FrostyIce109" draggable="false">
-      <h4>An amazing pixelit artist and has been supporting the game for a very long time.</h4>
-    </div>
-    <div class="credits-container">
-      <h3>Packman28</h3>
-      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/Packman28.png" alt="Packman28" draggable="false">
-      <h4>Helps with the backend development of Pixelit and a developer of Pixelit.</h4>
+      <h4>An amazing Pixelit artist and has been supporting the game for a very long time.</h4>
     </div>
     <div class="credits-container">
       <h3>Buenar</h3>
       <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/Buenar.png" alt="Buenar" draggable="false">
-      <h4>An OG Pixelit player and a Developer of Pixelit.</h4>
-    </div>
-    <div class="credits-container">
-      <h3>Iamgamedude</h3>
-      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/Iamgamedude.png" alt="Iamgamedude" draggable="false">
-      <h4>An amazing developer and a tester of Pixelit.</h4>
+      <h4>An OG Pixelit player and a tester of Pixelit.</h4>
     </div>
     <div class="credits-container">
       <h3>ThatPlanet</h3>
