--- a/public/panel/auditLogs/auditLogs.html
+++ b/public/panel/auditLogs/auditLogs.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Forms</title>
+    <title>Panel</title>
     <link rel="icon" type="image/png" href="../img/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="forms.css" rel="stylesheet" />
+    <link href="auditLogs.css" rel="stylesheet" />
   </head>
   <body>
     <body style="background-color: #6d0180">
@@ -39,17 +39,14 @@
           <div class="loader" style="display: inline-block"></div>
         </div>
       </div>
+        <h1 class="welcome-title">Audit Logs</h1>
       <center>
-        <section id="requests" style="background: transparent;">
-          <hr />
-          <h1>Forms</h1>
-        </section>
-      </center>      
-    </body>
+        <div id="logsContainer"></div>
+      </center>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
-    <script src="./enc.js"></script>
     <script src="/api/verifyenc.js"></script>
+    <script src="auditLogs.js"></script>
     <script src="/api/banned.js"></script>
     <script src="/api/auth.js"></script>
   </body>
