--- a/public/panel/enc/enc.html
+++ b/public/panel/enc/enc.html
@@ -54,8 +54,8 @@
             <i class="fa-solid fa-users"></i> User Manager
           </button>
           <br>
-          <button class="button" onclick="window.location.href=''">
-            <i class="fa-solid fa-list"></i> Audit Logs (coming soon)
+          <button class="button" onclick="window.location.href='../auditLogs/auditLogs.html'">
+            <i class="fa-solid fa-list"></i> Audit Logs
           </button>
       </center>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
