--- a/public/site/credits.html
+++ b/public/site/credits.html
@@ -56,7 +56,7 @@
     </div>
     <div class="credits-container">
       <h3>Lemon</h3>
-      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/logo.png" alt="Lemon" draggable="false">
+      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/Placeholder.png" alt="Lemon" draggable="false">
       <h4>Owner of the Pixelit domain and hosts the website for us and has helped alot with development.</h4>
     </div>
     <div class="credits-container">
@@ -76,7 +76,7 @@
     </div>
     <div class="credits-container">
       <h3>Prq</h3>
-      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/logo.png" alt="ThatPlanet" draggable="false">
+      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/Placeholder.png" alt="Prq" draggable="false">
       <h4>Long time contributer to Pixelit's development, and an amazing exploit finder.</h4>
     </div>
   </body>
