--- a/public/site/gifts.html
+++ b/public/site/gifts.html
@@ -15,9 +15,11 @@
       href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" href="https://izumiihd.github.io/pixelitcdn/assets/img/favicon.ico">
-    <link rel="stylesheet" href="../css/pixels.css" />
-    <title>Pixels</title>
+    <link rel="icon" type="image/png" href="https://izumiihd.github.io/pixelitcdn/assets/img/favicon.ico" />
+    <link rel="stylesheet" href="../css/gifts.css" />
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <title>Gifts</title>
   </head>
   <body style="background: #6d0180">
     <img alt="Blooks Background" class="bg_img" />
@@ -49,50 +51,14 @@
       </div>
       <div class="title_p" id="title_p">Pixelit</div>
     </div>
-    <center>
-      <div style="padding-left: 16px">
-      </div>
-    </center>
-    <div class="container">
-      <div class="pack">
-        <h1 style="font-size: 26px;">Pack</h1>
-        <div class="items">
-          <div class="item">
-            <i class="fa-solid fa-lock fa-2xl" style="text-shadow: 2px 2px 4px #000000;"></i>
-            <div class="badge">0</div>
-          </div>
-        </div>
-      </div>
-      </div>
-    <div class="blook-details">
-      <center>
-        <h1 class="name" id="blook-name">Select a Pixel</h1>
-        <h2 id="blook-rarity"></h2>
-        <img
-          id="blook-image"
-          src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/logo.png"
-          alt="Blook Image"
-          draggable="false"
-        />
-        <br />
-        <br />
-        <h2 class="owned" id="blook-owned"></h2>
-        <div class="button-container">
-        <div>
-          <button id="sell-blook" class="button-style smooth-hover" >
-           <i class="fa-solid fa-sack-dollar" style="font-size: 26px;"></i>
-            Sell
-          </button>
-            </div>
-          <button id="set-pfp" class="button-style smooth-hover" >
-           <i class="fa-solid fa-user" style="font-size: 26px;"></i> Profile
-          </button>
-        </div>
-        <div id="server-message"></div>
-      </center>
+    <div class="blooksBox" id="blooks">
+      <h1>
+        Pixels
+      </h1>
     </div>
-    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-    <script src="/javascript/pixels.js"></script>
+      
+    </div>
+    <script src="/javascript/gifts.js" defer></script>
     <script src="/api/banned.js"></script>
     <script src="/api/auth.js"></script>
   </body>
