changed a file name

--- a/public/panel/getHelp/getHelp.html
+++ b/public/panel/getHelp/getHelp.html
@@ -50,9 +50,9 @@
       </div>
     </center>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-    <script src="../../api/verifyenc.js"></script>
-    <script src="/api/verifyOwner.js"></script>
-    <script src="/api/banned.js"></script>
-    <script src="/api/auth.js"></script>
+    <script src="../../auth/verifyenc.js"></script>
+    <script src="/auth/console.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/auth.js"></script>
   </body>
 </html>
