--- a/public/site/credits.html
+++ b/public/site/credits.html
@@ -80,4 +80,5 @@
       <h4>Long time contributer to Pixelit's development, and an amazing exploit finder.</h4>
     </div>
   </body>
+  <script src="/auth/console.js"></script>
 </html>
