--- a/public/site/gifts.html
+++ b/public/site/gifts.html
@@ -58,8 +58,9 @@
     </div>
       
     </div>
-    <script src="/javascript/gifts.js" defer></script>
-    <script src="/api/banned.js"></script>
-    <script src="/api/auth.js"></script>
+    <script src="/javascript/gifts.js"></script>
+    <script src="/auth/console.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/auth.js"></script>
   </body>
 </html>
