--- a/public/site/register.html
+++ b/public/site/register.html
@@ -63,6 +63,7 @@
     </form>
   </div>
   <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-  <script src="/api/register.js"></script>
+  <script src="/auth/register.js"></script>
+  <script src="/auth/console.js"></script>
 </body>
 </html>
