--- a/public/panel/addbadge/badgeadder.html
+++ b/public/panel/addbadge/badgeadder.html
@@ -57,10 +57,11 @@
           <ul class="badge-list" id="badge-list"></ul>
       </div>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-    <script src="../../api/verifyenc.js"></script>
+    <script src="../../auth/verifyenc.js"></script>
     <script src="./badgeadd.js"></script>
-    <script src="/api/verifyOwner.js"></script>
-    <script src="/api/banned.js"></script>
-    <script src="/api/auth.js"></script>
+    <script src="/auth/verifyOwner.js"></script>
+    <script src="/auth/console.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/auth.js"></script>
   </body>
 </html>
