--- a/public/panel/auditLogs/auditLogs.html
+++ b/public/panel/auditLogs/auditLogs.html
@@ -45,9 +45,10 @@
       </center>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
-    <script src="/api/verifyenc.js"></script>
+    <script src="/auth/verifyenc.js"></script>
     <script src="auditLogs.js"></script>
-    <script src="/api/banned.js"></script>
-    <script src="/api/auth.js"></script>
+    <script src="/auth/console.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/auth.js"></script>
   </body>
 </html>
