--- a/public/panel/badge/badgeeditor.html
+++ b/public/panel/badge/badgeeditor.html
@@ -49,10 +49,11 @@
         <div id="additional-content">
         </div>
       </div>
-    <script src="../../api/verifyenc.js"></script>
+    <script src="../../auth/verifyenc.js"></script>
     <script src="./badgeeditor.js"></script>
-    <script src="/api/verifyOwner.js"></script>
-    <script src="/api/banned.js"></script>
-    <script src="/api/auth.js"></script>
+    <script src="/auth/verifyOwner.js"></script>
+    <script src="/auth/console.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/auth.js"></script>
   </body>
 </html>
