--- a/public/panel/formsManager/forms.html
+++ b/public/panel/formsManager/forms.html
@@ -49,8 +49,9 @@
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <script src="./enc.js"></script>
-    <script src="/api/verifyenc.js"></script>
-    <script src="/api/banned.js"></script>
-    <script src="/api/auth.js"></script>
+    <script src="/auth/verifyenc.js"></script>
+    <script src="/auth/console.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/auth.js"></script>
   </body>
 </html>
