--- a/public/site/chat.html
+++ b/public/site/chat.html
@@ -87,7 +87,8 @@
       </div>
     </div>
     <script src="/javascript/chat.js" defer></script>
-    <script src="/api/banned.js"></script>
-    <script src="/api/auth.js"></script>
+    <script src="/auth/console.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/auth.js"></script>
   </body>
 </html>
