--- a/public/site/dashboard.html
+++ b/public/site/dashboard.html
@@ -182,7 +182,8 @@
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 <script src="/javascript/dashboard.js"></script>  
 <script src="/javascript/dashboard2.js"></script>
-<script src="/api/banned.js"></script>
-<script src="/api/auth.js"></script>
+<script src="/auth/console.js"></script>
+<script src="/auth/banned.js"></script>
+<script src="/auth/auth.js"></script>
 </body>
 </html>
