--- a/public/site/index.html
+++ b/public/site/index.html
@@ -21,7 +21,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/login"><i class="fa-solid fa-right-to-bracket"></i> Login </a>
+            <a href="/login.html"><i class="fa-solid fa-right-to-bracket"></i> Login </a>
             <a href="/register.html"><i class="fa-solid fa-user-plus"></i> Register </a>
             <a href="/news.html"><i class="fa-solid fa-newspaper"></i> News </a>
             <a href="/credits.html"><i class="fa-solid fa-users"></i> Credits </a>
@@ -69,5 +69,6 @@
       document.addEventListener('DOMContentLoaded', displayVersion);
     </script>
     <script src="/javascript/home.js"></script>
+    <script src="/auth/console.js"></script>
   </body>
 </html>
