--- a/public/site/leaderboard.html
+++ b/public/site/leaderboard.html
@@ -63,6 +63,7 @@
     </div>
   </body>
   <script src="/javascript/leaderboard.js"></script>
-  <script src="/api/banned.js"></script>
-  <script src="/api/auth.js"></script>
+  <script src="/auth/console.js"></script>
+  <script src="/auth/banned.js"></script>
+  <script src="/auth/auth.js"></script>
 </html>
