--- a/public/site/login.html
+++ b/public/site/login.html
@@ -60,7 +60,8 @@
     </form>
   </div>
   <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-  <script src="/api/login.js"></script>
-  <script src="/api/loggedin.js"></script>
+  <script src="/auth/login.js"></script>
+  <script src="/auth/loggedin.js"></script>
+  <script src="/auth/console.js"></script>
 </body>
 </html>
