--- a/public/site/market.html
+++ b/public/site/market.html
@@ -85,7 +85,8 @@
         </div>
       </div>
       <script src="/javascript/market.js"></script>
-      <script src="/api/banned.js"></script>
-      <script src="/api/auth.js"></script>
+      <script src="/auth/banned.js"></script>
+      <script src="/auth/console.js"></script>
+      <script src="/auth/auth.js"></script>
     </body>
 </html>
