--- a/public/site/news.html
+++ b/public/site/news.html
@@ -65,5 +65,6 @@
     </div>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="../javascript/news.js"></script>
+    <script src="/auth/console.js"></script>
   </body>
 </html>
