--- a/public/site/settings.html
+++ b/public/site/settings.html
@@ -78,7 +78,8 @@
       </div>
     </div>
     <script src="/javascript/settings.js"></script>
-    <script src="/api/banned.js"></script>
-    <script src="/api/auth.js"></script>
+    <script src="/auth/console.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/auth.js"></script>
   </body>
 </html>
