--- a/public/panel/formsManager/forms.html
+++ b/public/panel/formsManager/forms.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <title>Forms</title>
-    <link rel="icon" type="image/png" href="../img/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,6 +16,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="forms.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="https://izumiihd.github.io/pixelitcdn/assets/img/favicon.ico" />
   </head>
   <body>
     <body style="background-color: #6d0180">
