--- a/public/panel/enc/enc.html
+++ b/public/panel/enc/enc.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <title>Panel</title>
-    <link rel="icon" type="image/png" href="../img/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +15,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="https://izumiihd.github.io/pixelitcdn/assets/img/favicon.ico" />
     <link href="enc.css" rel="stylesheet" />
   </head>
   <body>
