--- a/public/panel/getHelp/getHelp.html
+++ b/public/panel/getHelp/getHelp.html
@@ -1,9 +1,8 @@
 <html>
   <head>
-    <title>Developer Panel</title>
+    <title>Help</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" type="image/png" href="../img/favicon.ico">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -16,7 +15,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="../img/favicon.ico" />
+    <link rel="icon" type="image/png" href="https://izumiihd.github.io/pixelitcdn/assets/img/favicon.ico" />
     <link href="../enc/enc.css" rel="stylesheet" />
     <link rel="stylesheet" href="owner.css">
   </head>
