--- a/public/panel/packEditorPage/packeditor.html
+++ b/public/panel/packEditorPage/packeditor.html
@@ -16,7 +16,7 @@
             href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
             rel="stylesheet"
         />
-        <link rel="icon" type="image/png" href="../img/favicon.ico" />
+          <link rel="icon" type="image/png" href="https://izumiihd.github.io/pixelitcdn/assets/img/favicon.ico" />
         <title>Pack Editor</title>
         <link href="../packEditorPage/packeditor.css" rel="stylesheet" />
     </head>
