--- a/public/panel/userManagment/userManager.html
+++ b/public/panel/userManagment/userManager.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>User Manager</title>
-    <link rel="icon" type="image/png" href="../img/favicon.ico" />
+    <link rel="icon" type="image/png" href="https://izumiihd.github.io/pixelitcdn/assets/img/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
