added panel guide and animation

--- a/public/panel/enc/enc.html
+++ b/public/panel/enc/enc.html
@@ -58,6 +58,10 @@
           <button class="button" onclick="window.location.href='../auditLogs/auditLogs.html'">
             <i class="fa-solid fa-list"></i> Audit Logs
           </button>
+          <br>
+          <button class="button" onclick="window.location.href='../getHelp/getHelp.html'">
+            <i class="fa-solid fa-circle-info"></i> Get Help
+          </button>
       </center>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
