--- a/public/panel/ownerPanelPage/owner.html
+++ b/public/panel/ownerPanelPage/owner.html
@@ -65,7 +65,7 @@
 
       <button
         class="button"
-        onclick="window.location.href='../news/newsedit'"
+        onclick="window.location.href='../news/newsedit.html'"
       >
         <i class="fa-solid fa-newspaper"></i> News Editor
       </button>
