added bare things dawggg

--- a/public/site/index.html
+++ b/public/site/index.html
@@ -68,6 +68,7 @@
       import { displayVersion } from '/javascript/versionDisplay.js';
       document.addEventListener('DOMContentLoaded', displayVersion);
     </script>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="/javascript/home.js"></script>
     <script src="/auth/console.js"></script>
   </body>
