--- a/public/site/leaderboard.html
+++ b/public/site/leaderboard.html
@@ -62,6 +62,7 @@
       </div> 
     </div>
   </body>
+  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   <script src="/javascript/leaderboard.js"></script>
   <script src="/auth/console.js"></script>
   <script src="/auth/banned.js"></script>
