--- a/public/site/market.html
+++ b/public/site/market.html
@@ -80,13 +80,14 @@
     <div class="packContainer" id="packContainer" draggable="false" 
          style="display: flex; flex-wrap: wrap; gap: 1.5%; justify-content: center; align-items: center;">
     </div>
-        <div onmouseover="this.style.transform='scale(0.95)'; this.style.transition='transform 0.3s ease';" 
-             onmouseout="this.style.transform='scale(1)';">
-        </div>
+      <div onmouseover="this.style.transform='scale(0.95)'; this.style.transition='transform 0.3s ease';" 
+            onmouseout="this.style.transform='scale(1)';">
       </div>
-      <script src="/javascript/market.js"></script>
-      <script src="/auth/banned.js"></script>
-      <script src="/auth/console.js"></script>
-      <script src="/auth/auth.js"></script>
-    </body>
+    </div>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="/javascript/market.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/console.js"></script>
+    <script src="/auth/auth.js"></script>
+  </body>
 </html>
