--- a/public/site/news.html
+++ b/public/site/news.html
@@ -47,19 +47,16 @@
           <h1 class="news-header">
             Loading... <i class="fa-solid fa-newspaper"></i>
           </h1>
-        </center>
-        <div class="new-post">
+          <div class="new-post">
           <center>
             <div class="content">
               Loading...
             </div>
+            <br>
+            <div class="date">
+              0/0/0000 <i class="fa-solid fa-calendar-days"></i>
+            </div>
           </center>
-          <div class="authour">
-            Authour: Loading... <i class="fa-solid fa-user"></i>
-          </div>
-          <div class="date">
-            Date: 0/0/0000 <i class="fa-solid fa-calendar-days"></i>
-          </div>
         </div>
       </div>
     </div>
