--- a/public/site/settings.html
+++ b/public/site/settings.html
@@ -77,6 +77,7 @@
           </div>
       </div>
     </div>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="/javascript/settings.js"></script>
     <script src="/auth/console.js"></script>
     <script src="/auth/banned.js"></script>
