--- a/public/site/dashboard.html
+++ b/public/site/dashboard.html
@@ -180,7 +180,7 @@
     </div>
   </div>
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-<script src="/javascript/dashboard.js"></script>  
+<script type="module" src="/javascript/dashboard.js"></script>  
 <script src="/javascript/dashboard2.js"></script>
 <script src="/auth/console.js"></script>
 <script src="/auth/banned.js"></script>
