--- a/public/site/pixels.html
+++ b/public/site/pixels.html
@@ -31,7 +31,7 @@
             <a href="/leaderboard.html"><i class="fa-solid fa-trophy"></i></a>
             <a href="/market.html"><i class="fa-solid fa-store"></i></a>
             <a href="/pixels.html"><i class="fa-solid fa-suitcase"></i></a>
-            <a href="/gifts.html"><i class="fa-solid fa-gift"></i></a>
+            <a href="/notifications.html"><i class="fa-solid fa-bell"></i></a>
             <a
               id="wrench-icon"
               href="../panel/enc/enc.html"
@@ -91,6 +91,9 @@
         <div id="server-message"></div>
       </center>
     </div>
+    <button id="gift" class="giftButton" >
+     <i class="fa-solid fa-gift" style="font-size: 26px;"></i> Gift
+    </button>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="/javascript/pixels.js"></script>
     <script src="/auth/console.js"></script>
