--- a/public/site/market.html
+++ b/public/site/market.html
@@ -31,7 +31,7 @@
             <a href="/leaderboard.html"><i class="fa-solid fa-trophy"></i></a>
             <a href="/market.html"><i class="fa-solid fa-store"></i></a>
             <a href="/pixels.html"><i class="fa-solid fa-suitcase"></i></a>
-            <a href="/gifts.html"><i class="fa-solid fa-gift"></i></a>
+            <a href="/notifications.html"><i class="fa-solid fa-bell"></i></a>
             <a
               id="wrench-icon"
               href="../panel/enc/enc.html"
