--- a/public/site/credits.html
+++ b/public/site/credits.html
@@ -30,7 +30,7 @@
   </div>
   <div class="title_p" id="title_p">Pixelit</div>
   <center>
-    <h1 style="color: #fff; text-shadow: #000 1px 0 13px;">Credits</h1>
+    <h1 style="color: #fff; text-shadow: 2px 2px 4px #000000;">Credits</h1>
   </center>
   <div class="credits-containers">
     <div class="credits-container">
