--- a/public/site/index.html
+++ b/public/site/index.html
@@ -13,6 +13,11 @@
       <title>Pixelit</title>
     </head>
   <body class="body-bg-color">
+    <div id="loadingModal" class="overlay-container" style="display: none;">
+        <div class="overlay-content">
+            <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/Miscellaneous/pixelit2025.png" class="spinner" alt="Loading..." />
+        </div>
+    </div>
     <img alt="Blooks Background" class="bg_img" />
       <div class="navbar">
         <a href="/index.html"><i class="fa-solid fa-house"></i></a>
