--- a/public/site/notifications.html
+++ b/public/site/notifications.html
@@ -18,13 +18,20 @@
       <div>
           <div>
             <a href="javascript:history.back()"><i class="fa-solid fa-reply"></i></a>
-
           </div>
       </div>
       <div class="title_p" id="title_p">Pixelit</div>
     </div>
-    </div>
+    <center>
+      <div>
+        <h1>Notifications</h1>
+        <div id="notifications"></div>
+      </div>
+    </center>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="/javascript/notifications.js"></script>
     <script src="/auth/console.js"></script>
+    <script src="/auth/banned.js"></script>
+    <script src="/auth/auth.js"></script>
   </body>
 </html>
