--- a/public/panel/enc/enc.html
+++ b/public/panel/enc/enc.html
@@ -47,6 +47,8 @@
             The Staff panel will be rewritten sometime around update 2.3.0 - 2.5.0.
           </p>
           <br>
+          <h1>Moderation</h1>
+          <br>
           <button class="button" onclick="window.location.href='../formsManager/forms.html'">
             <i class='fa-solid fa-file'></i> Forms Manager
           </button>
