--- a/public/site/changelogs.html
+++ b/public/site/changelogs.html
@@ -73,6 +73,18 @@
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Revamped pixels page.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Minor market edits.</h3>
       </div>
+
+      <div class="changelog-entry changelog-v226">
+        <h2 class="changelog-version">Version 2.2.4 - New Updates and Improvements</h2>
+        <p class="changelog-description">This update includes the following changes:</p>
+
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Created a chat filter.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added a staff panel guide.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added console warning messages.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added a pixel gifting feature.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added a notifications feature.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added a new blooks background.</h3>
+      </div>
     </div>
   </div>
 </body>
